# HarvestMind

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  crops.html  docker-compose.yml  doctor.sh  index.html  markets.html  mydata.html  overview.html  server.js
api/: .env.example  Dockerfile  pyproject.toml
api/app/: main.py
api/app/api/routes/: advisor.py  analysis.py  feedback.py  health.py  intake.py  market.py  ops.py  profiles.py  recommendations.py  signals.py
api/app/clients/: firecrawl.py  glm.py  market.py  news.py  prices.py  weather.py
api/app/core/: config.py  malaysia.py
api/app/db/: __init__.py  postgres.py  runtime.py
api/app/intake/: __init__.py  conversation_manager.py  field_extractor.py  missing_field_detector.py
api/app/repositories/: feedback.py  intake_sessions.py  profiles.py  recommendations.py  signals.py  sync_jobs.py
api/app/schemas/: advisor.py  analysis.py  feedback.py  intake.py  intake_session.py  market.py  ops.py  profile.py  recommendation.py  signal.py
api/app/services/: advisor.py  market.py  ops.py  orchestrator.py
api/app/tools/: news_signal.py  price_analysis.py  scenario_compare.py  seasonal_weather.py  weather_risk.py
api/app/workers/: celery_app.py
api/docs/: ARCHITECTURE.md  plan.md
api/sql/: 001_init.sql
public/: crops.html  index.html  markets.html  mydata.html
