[project]
name = "agripivot-backend"
version = "0.1.0"
description = "Decision intelligence backend for crop pivot vs persevere analysis"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "psycopg[binary]>=3.2.1",
  "python-dotenv>=1.0.1",
  "celery>=5.4.0",
  "redis>=5.0.7",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
